# CodeFishK

./: .clang-format  .gitignore  OAT.xml  README.md  README_zh.md  readme.md
ability/config/: device_resource_if.c
include/audio/: audio_accessory_if.h  audio_codec_if.h  audio_dai_if.h  audio_dsp_if.h  audio_platform_if.h
include/config/: device_resource_if.h
include/core/: hdf_device_desc.h  hdf_io_service_if.h  hdf_object.h  hdf_pm.h
include/ethernet/: eth_chip_driver.h
include/net/: net_device.h
include/osal/: osal_firmware.h  osal_sem.h
include/platform/: adc_if.h  dac_if.h  gpio_if.h  hdmi_if.h  i2c_if.h  i2s_if.h  i3c_ccc.h  i3c_if.h  mipi_csi_if.h  mipi_dsi_if.h  mmc_if.h  pcie_if.h  pin_if.h  pwm_if.h  regulator_if.h  rtc_if.h  spi_if.h  timer_if.h  uart_if.h  watchdog_if.h
include/utils/: hcs_macro.h  hdf_base.h  hdf_dlist.h
include/wifi/: hdf_wifi_event.h  hdf_wifi_product.h  net_device.h  wifi_inc.h  wifi_mac80211_ops.h  wifi_module.h
sample/platform/gpio/src/: BUILD.gn  gpio_dispatch_sample.c  gpio_pl061_sample.c  gpio_sample.c
sample/platform/spi/src/: BUILD.gn  spi_dispatch_sample.c  spi_pl022_sample.c  spi_sample.c
tools/hc-gen/: CMakeLists.txt  Makefile  build_hcs.py  hc_gen.gni
tools/hc-gen/include/: hcs_compiler.h  hcs_decompiler.h  hcs_file.h  hcs_gener.h  hcs_log.h  hcs_opcode.h  hcs_option.h
tools/hc-gen/src/: ast.cpp  ast.h  bytecode_gen.cpp  bytecode_gen.h  decompile.cpp  decompile.h  decompile_gen.cpp  decompile_gen.h  file.cpp  file.h  generator.h  hcs_ast.c  hcs_bytecode_gen.c  hcs_decompile_gen.c  hcs_decompiler.c  hcs_file.c  hcs_hexdump.c  hcs_mem.c  hcs_middle.c  hcs_opcode.c  hcs_option.c  hcs_parser.c  hcs_text_gen.c  lexer.cpp  lexer.h  logger.h  macro_gen.cpp  macro_gen.h  main.cpp  opcode.h  option.cpp  option.h  parser.cpp  parser.h  text_gen.cpp  text_gen.h  token.cpp  token.h  types.h
tools/hc-gen/test/: update_case.py
tools/hc-gen/test/02_empty_root_ei/: case.hcs
tools/hc-gen/test/03_empty_node/: case.hcs
tools/hc-gen/test/04_number_term/: case.hcs
tools/hc-gen/test/05_string_term/: case.hcs
tools/hc-gen/test/06_number_array/: case.hcs
tools/hc-gen/test/07_string_array/: case.hcs
tools/hc-gen/test/08_term_ref/: case.hcs
tools/hc-gen/test/09_node_nested/: case.hcs
tools/hc-gen/test/10_node_copy/: case.hcs
tools/hc-gen/test/11_case_node_ref/: case.hcs
tools/hc-gen/test/12_include_insert/: base.hcs  case.hcs
tools/hc-gen/test/13_include_modify/: base.hcs  case.hcs
tools/hc-gen/test/14_include_delete/: base.hcs  case.hcs
tools/hc-gen/test/15_line_comment/: case.hcs
tools/hc-gen/test/16_block_comment/: case.hcs
tools/hc-gen/test/17_broken_node_ei/: case.hcs
tools/hc-gen/test/18_broken_string_ei/: case.hcs
tools/hc-gen/test/19_broken_number_ei/: case.hcs
tools/hc-gen/test/20_broken_array_ei/: case.hcs
tools/hc-gen/test/21_mix_type_array_ei/: case.hcs
tools/hc-gen/test/22_redefine_error_ei/: case.hcs
tools/hc-gen/test/23_node_ref_invalid_node_ei/: case.hcs
tools/hc-gen/test/24_node_copy_invlid_node_ei/: case.hcs
tools/hc-gen/test/25_term_ref_invlid_node_ei/: case.hcs
tools/hc-gen/test/26_miss_semicolon_ei/: case.hcs
tools/hc-gen/test/27_include_invalid_file_ei/: case.hcs
tools/hc-gen/test/28_overwrite_with_diff_type_ei/: case.hcs
tools/hc-gen/test/29_node_copy_nested_ei/: case.hcs
tools/hc-gen/test/30_include_order/: base1.hcs  base2.hcs  case.hcs
tools/hc-gen/test/31_node_duplicate_name/: case.hcs
tools/hc-gen/test/32_large_hsl/: case.hcs
tools/hc-gen/test/33_miss_module_name_ei/: case.hcs
tools/hc-gen/test/34_template/: case.hcs
tools/hc-gen/test/35_nested_template/: case.hcs
(+870 files in other folders)
