# Copyright (c) 2021 Huawei Device Co., Ltd.
#
# HDF is dual licensed: you can use it either under the terms of
# the GPL, or the BSD license, at your option.
# See the LICENSE file in the root of this repository for complete details.

import("//drivers/adapter/khdf/liteos/hdf.gni")

module_switch = defined(LOSCFG_DRIVERS_HDF_PLATFORM_SPI_SAMPLE)
module_name = "hdf_spi_sample"
hdf_driver(module_name) {
  FRAMEWORK_SPI_ROOT = "//drivers/framework/sample/platform/spi/src"
  sources = [
    "$FRAMEWORK_SPI_ROOT/spi_dispatch_sample.c",
    "$FRAMEWORK_SPI_ROOT/spi_pl022_sample.c",
    "$FRAMEWORK_SPI_ROOT/spi_sample.c",
  ]

  include_dirs = [
    "//drivers/framework/sample/platform/spi/include/",
    "//drivers/framework/support/platform/include/spi",
  ]
}
